--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.AddSignatures_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.AddSignatures_MT.adoc
@@ -113,7 +113,7 @@ namespace BackOffice
 <.> Не подписанные файлы не загружаются.
 <.> Предварительная загрузка основного файла. Необходима для корректной проверки подписи.
 <.> Выгрузка сообщения CMS/PKCS 7 из файла.
-<.> Проверка действительности подписи и сертификата. В случае недействительности загруженный ранее файл будет удален.
+<.> Проверка действительности подписи и сертификата. В случае недействительности загруженный ранее файл будет удалён.
 <.> Подписание документа.
 
 К скрипту карточки требуется добавить сборку `System.Security.dll`.
