--- a/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.DeleteDeputy_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.DeleteDeputy_MT.adoc
@@ -21,7 +21,7 @@ employee:::
 deputy:::
 Тип: `xref:BackOffice-ObjectModel-Staff:StaffDeputy_CL.adoc[StaffDeputy]`
 +
-Заместитель, который должен быть удален
+Заместитель, который должен быть удалён
 
 == Исключения
 
