--- a/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IVersionedFileCardService.OpenCard_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IVersionedFileCardService.OpenCard_MT.adoc
@@ -28,5 +28,5 @@ cardId:::
 [cols=",",options="header"]
 |===
 |Исключение |Условие
-|`http://msdn.microsoft.com/ru-ru/library/system.argumentoutofrangeexception.aspx[System.ArgumentOutOfRangeException]` |Ошибка возвращается в случае, если файл с идентификатором _cardId_ не существует, либо удален.
+|`http://msdn.microsoft.com/ru-ru/library/system.argumentoutofrangeexception.aspx[System.ArgumentOutOfRangeException]` |Ошибка возвращается в случае, если файл с идентификатором _cardId_ не существует, либо удалён.
 |===
