--- a/modules/Platform-ObjectManager-Metadata/pages/ObjectState_EN.adoc
+++ b/modules/Platform-ObjectManager-Metadata/pages/ObjectState_EN.adoc
@@ -19,5 +19,5 @@ public enum ObjectState
 |Имя члена |Описание
 |`NotExisting` |Карточки с не существует.
 |`Existing` |Карточка существует и может быть получена.
-|`Deleted` |Карточка существует, но помечена как удаленная, работа с ней невозможна.
+|`Deleted` |Карточка существует, но помечена как удалённая, работа с ней невозможна.
 |===
