--- a/modules/Platform-ObjectManager-Metadata/pages/ObjectStatus_EN.adoc
+++ b/modules/Platform-ObjectManager-Metadata/pages/ObjectStatus_EN.adoc
@@ -22,7 +22,7 @@ public enum ObjectStatus
 |Имя члена |Описание
 |`Normal` |Исходное состояние. Значение `0x0`.
 |`New` |Новый объект. Значение `0x1`.
-|`Deleted` |Объект удален. Значение `0x2`.
+|`Deleted` |Объект удалён. Значение `0x2`.
 |`Changed` |Данные объекта были изменены. Значение `0x4`.
 |`Moved` |Изменено положение объекта в иерархии. Значение `0x8`.
 |===
