--- a/modules/Platform-ObjectManager-SearchModel/pages/SearchQuery_CL.adoc
+++ b/modules/Platform-ObjectManager-SearchModel/pages/SearchQuery_CL.adoc
@@ -23,7 +23,7 @@ public abstract class SearchQuery
 |`DirectXml` |Возвращает или задаёт значение, указывающее, может ли пользователь непосредственно изменить XML.
 |`xref:FullTextSearch.SearchQuery_PR.adoc[FullTextSearch]` |Возвращает методы полнотекстового поиска.
 |`IncludeArchived` |Возвращает или задаёт требование включения в область поиска архивных карточек.
-|`IncludeDeleted` |Возвращает или задаёт требование включения в область поиска удаленных карточек.
+|`IncludeDeleted` |Возвращает или задаёт требование включения в область поиска удалённых карточек.
 |`IncludeLinkedCards` |Возвращает или задаёт требование включения в область поиска карточки связанные с найденными ссылкой.
 |`IncludeTopicCards` |Позволяет включить в результаты поиска карточки, принадлежащие к одной теме обработки с найденными.
 |`Limit` |Возвращает или задаёт максимальное количество карточек включённых в результат поиска.
