--- a/modules/Platform-ObjectManager-UserSession/pages/ViewReadRequest_CL.adoc
+++ b/modules/Platform-ObjectManager-UserSession/pages/ViewReadRequest_CL.adoc
@@ -29,7 +29,7 @@ public abstract class ViewReadRequest
 |`SelectionItemIds` |Задаёт или возвращает порядковые номера выбранных в старом представлении строк.
 |`Session` |Возвращает текущую сессию пользователя.
 |`ShowArchived` |Задаёт или возвращает признак включения архивных карточек.
-|`ShowDeleted` |Задаёт или возвращает признак включения удаленных карточек.
+|`ShowDeleted` |Задаёт или возвращает признак включения удалённых карточек.
 |`ShowHidden` |Задаёт или возвращает признак включения скрытых карточек.
 |`ShowLabels` |Задаёт или возвращает признак включения меток.
 |`Sortings` |Возвращает коллекцию параметров сортировки.
