--- a/modules/Platform-ObjectManager-UserSession/pages/ViewSource_CL.adoc
+++ b/modules/Platform-ObjectManager-UserSession/pages/ViewSource_CL.adoc
@@ -18,7 +18,7 @@ public sealed class ViewSource
 |===
 |Имя |Описание
 |`ShowArchived` |Возвращает или задаёт признак необходимости отображения в представлении архивных карточек.
-|`ShowDeleted` |Возвращает или задаёт признак необходимости отображения в представлении удаленных карточек.
+|`ShowDeleted` |Возвращает или задаёт признак необходимости отображения в представлении удалённых карточек.
 |`ShowHidden` |Возвращает или задаёт признак необходимости отображения в представлении скрытых и системных карточек.
 |===
 
