--- a/modules/Platform-ObjectModel/pages/ObjectStateFlags_EN.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectStateFlags_EN.adoc
@@ -23,9 +23,9 @@ public enum ObjectStateFlags
 |`None` |Флаг не установлен. Значение `0x00`.
 |`Modified` |Объект был модифицирован. Значение `0x01`.
 |`Added` |Объект был добавлен. Значение `0x02`.
-|`Deleted` |Объект был удален. Значение `0x04`.
+|`Deleted` |Объект был удалён. Значение `0x04`.
 |`Attached` |Объект был прикреплен к другому. Значение `0x08`.
-|`DeletedFromParent` |Объект был удален у родителя. Значение `0x10`.
+|`DeletedFromParent` |Объект был удалён у родителя. Значение `0x10`.
 |===
 
 == Заметки
