--- a/modules/Workflow/pages/Objects/Library_CL.adoc
+++ b/modules/Workflow/pages/Objects/Library_CL.adoc
@@ -48,7 +48,7 @@ public class Library
 |`GetProcess(Guid)` |Получает бизнес-процесс с указанным идентификатором.
 |`GetProcess(String, Guid)` |Получает бизнес-процесс с указанным идентификатором. При запросе будет использована сессия, выбранная из пула сессий по переданной строке соединения.
 |`GetProcesses(Boolean, Boolean)` |Возвращает коллекцию бизнес-процессов, используя переданные параметры в качестве фильтра.
-|`HandleProcessFinishing(Guid, Int32)` |Обрабатывает завершённой бизнес-процесс, который в зависимости от настроек может быть перемещен в архив, либо удален.
+|`HandleProcessFinishing(Guid, Int32)` |Обрабатывает завершённой бизнес-процесс, который в зависимости от настроек может быть перемещен в архив, либо удалён.
 |`Shutdown` |Выполняет очистку пулов сессии и шлюзов, освободив занимаемые ресурсы.
 |===
 
