--- a/modules/appendix/pages/controls/docsvision/TaskTreeView.adoc
+++ b/modules/appendix/pages/controls/docsvision/TaskTreeView.adoc
@@ -28,7 +28,7 @@ DocsVision.BackOffice.WinForms.Controls.TaskTreeViewColumn.State;
 == Методы
 
 * `AddChildTaskToSelectedTask` -- создаёт дочернее задание у выделенного элемента списка.
-* `ClearData` -- очищает список удаленных заданий.
+* `ClearData` -- очищает список удалённых заданий.
 * `CopyResultsToParentTask(Task)` -- копирует результат выполнения дочернего задания в родительское.
 * `CopyTask` -- копирует выделенное задание.
 * `CreateChildTask(Task, KindsCardKind)` -- создаёт дочернее задание, указанного вида.
