--- a/modules/appendix/pages/webservice/cards/CardGetState.adoc
+++ b/modules/appendix/pages/webservice/cards/CardGetState.adoc
@@ -55,7 +55,7 @@ Content-Length: length
 .Ответ может содержать одно из состояний:
 * `CARD_STATE_NOT_EXISTING` -- карточка не существует.
 * `CARD_STATE_EXISTING` -- карточка существует.
-* `CARD_STATE_DELETED` -- карточка отмечена как удаленная.
+* `CARD_STATE_DELETED` -- карточка отмечена как удалённая.
 
 == Пример запроса
 
