--- a/modules/appendix/pages/webservice/folders/FolderDelete.adoc
+++ b/modules/appendix/pages/webservice/folders/FolderDelete.adoc
@@ -30,7 +30,7 @@ sessionId:::
 folderId:::
 Идентификатор папки
 permanent:::
-Если `false`, то папка только помечается как удаленная.
+Если `false`, то папка только помечается как удалённая.
 
 == Ответ
 
