--- a/modules/cards/pages/delete-object.adoc
+++ b/modules/cards/pages/delete-object.adoc
@@ -13,7 +13,7 @@ userSession.CardManager.DeleteCard(cardId); <.> <.>
 <.> `userSession` -- пользовательская сессия.
 <.> `cardId` -- идентификатор удаляемой карточки.
 
-Приведенный выше код удаляет карточку без возможности восстановления, при этом другая перегрузка метода позволяет пометить карточку как удаленную (в {wincl}е отображается курсивом) без фактического удаления:
+Приведенный выше код удаляет карточку без возможности восстановления, при этом другая перегрузка метода позволяет пометить карточку как удалённую (в {wincl}е отображается курсивом) без фактического удаления:
 
 [source,csharp]
 ----
@@ -72,8 +72,8 @@ objectContext.AcceptChanges();
 <.> Для простоты, выбираем для удаления первый файл по списку.
 <.> Удаляем файл и сохраняем изменения.
 
-Данный код фактически выполняет удаление строки из секции `Файлы` карточки _Документ_, по аналогии с рассмотренным выше примером для базового API. Аналогичным образом может быть удален и сам документ.
+Данный код фактически выполняет удаление строки из секции `Файлы` карточки _Документ_, по аналогии с рассмотренным выше примером для базового API. Аналогичным образом может быть удалён и сам документ.
 
-Метод `DeleteObject` удаляет объект без возможности восстановления. Если требуется пометить карточку как удаленную, используйте базовый API.
+Метод `DeleteObject` удаляет объект без возможности восстановления. Если требуется пометить карточку как удалённую, используйте базовый API.
 
 Контекст объектов предлагает функциональность по отмене изменений объекта до его сохранения (вызова метода `AcceptChanges` или `SaveObject`), основанную на использовании методов `RollbackChanges` и `RollBackObject` (см. xref:views:delayed-changes.adoc[Режим отложенных изменений]).
