--- a/modules/cards/pages/search.adoc
+++ b/modules/cards/pages/search.adoc
@@ -58,7 +58,7 @@ query.Scope.Folders.AddNew(new Guid("C0BCEB41-A19B-4813-A355-82EB6FD4F5F0")).Inc
 
 Сходное по действию свойство `IncludeTopicCards` позволяет включить в результаты поиска карточки, принадлежащие к одной теме обработки с найденными.
 
-Признак `IncludeArchived` сигнализирует о необходимости включать в область поиска также и все архивные карточки. Аналогичный признак `IncludeDeleted` позволяет искать также и в удаленных карточках.
+Признак `IncludeArchived` сигнализирует о необходимости включать в область поиска также и все архивные карточки. Аналогичный признак `IncludeDeleted` позволяет искать также и в удалённых карточках.
 
 Чтобы получить сформированную строку запроса в формате XML надо воспользоваться методом `GetXml()`. В этом методе параметр __ForSearch=__**true** означает, что строка формируется с целью отправки на сервер, и не должна содержать неактивные настройки (например, такие, как поисковые слова).
 
