--- a/modules/schemas/pages/release/Core/Folders.adoc
+++ b/modules/schemas/pages/release/Core/Folders.adoc
@@ -78,7 +78,7 @@
 |`HardCardID` |Сильная ссылка на карточку |`refcardid` | |
 |`Mode` |Режим запуска |`uniqueid` | |
 |`Description` |Описание ярлыка |`unistring` |512 |
-|`Deleted` |Ярлык удален |`bool` | |
+|`Deleted` |Ярлык удалён |`bool` | |
 |`Recalled` |Поле |`bool` | |
 |`CreationDateTime` |Дата создания |`datetime` | |
 |===
