--- a/modules/schemas/pages/release/TakeOffice/FileList.adoc
+++ b/modules/schemas/pages/release/TakeOffice/FileList.adoc
@@ -37,7 +37,7 @@
 |`FieldsToFile` |Копировать поля в свойства файла |`bool` | |
 |`FileToFields` |Копировать свойства файла в поля |`bool` | |
 |`IsNew` |Новый файл |`bool` | |
-|`IsDeleted` |Файл удален |`bool` | |
+|`IsDeleted` |Файл удалён |`bool` | |
 |`OpenFileWithCard` |Открывать файл |`bool` | |
 |===
 
