--- a/modules/scripts/pages/debug-scripts.adoc
+++ b/modules/scripts/pages/debug-scripts.adoc
@@ -27,7 +27,7 @@
 +
 [NOTE]
 ====
-Visual Studio предоставляет средства, которые можно использовать для удаленной отладки -- Visual Studio Remote Debugger.
+Visual Studio предоставляет средства, которые можно использовать для удалённой отладки -- Visual Studio Remote Debugger.
 ====
 +
 . После завершения отладки, рабочий код из проекта можно скопировать в скрипт карточки и отключить отладочную сборку.
