--- a/modules/views/pages/event-logs.adoc
+++ b/modules/views/pages/event-logs.adoc
@@ -16,7 +16,7 @@
 .В системном журнале (Система) автоматически фиксируются следующие низкоуровневые операции сервера:
 * Операции с карточками:
 ** Создание карточки.
-** Пометка карточки как удаленной.
+** Пометка карточки как удалённой.
 ** Пометка карточки как прочитанной.
 ** Удаление карточки.
 ** Копирование карточки.
