--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CanRemoveMainFile_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CanRemoveMainFile_MT.adoc
@@ -26,7 +26,7 @@ file:::
 Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-`true` -- файл может быть удален, иначе -- `false`
+`true` -- файл может быть удалён, иначе -- `false`
 
 == Исключения
 
