--- a/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.RemoveGroupEmployee_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.RemoveGroupEmployee_MT.adoc
@@ -26,7 +26,7 @@ employee:::
 Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-`true` -- если удаляемый элемент был найден и удален, иначе -- `false`
+`true` -- если удаляемый элемент был найден и удалён, иначе -- `false`
 
 == Исключения
 
