--- a/modules/ApprovalDesigner/pages/ObjectModel/ApprovalPathRoadMap_CL.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/ApprovalPathRoadMap_CL.adoc
@@ -31,7 +31,7 @@ public sealed class ApprovalPathRoadMap : BaseCardSectionRow
 |Имя |Описание
 |`Condition2Property` |Определяет свойство "Условие 2".
 |`ConditionProperty` |Определяет свойство "Условие".
-|`ExcludedProperty` |Определяет свойство "Этап исключен".
+|`ExcludedProperty` |Определяет свойство "Этап исключён".
 |`OrderProperty` |Определяет свойство "Приоритет".
 |`StageProperty` |Определяет свойство "Этап".
 |===
