--- a/modules/schemas/pages/release/ApprovalDesigner/CardApprovalPath.adoc
+++ b/modules/schemas/pages/release/ApprovalDesigner/CardApprovalPath.adoc
@@ -102,7 +102,7 @@
 
 |`Condition` |Условие |`unitext` | |
 |`Condition2 |Условие 2 |`unitext` | |
-|`Excluded` |Этап исключен |`bool` | |
+|`Excluded` |Этап исключён |`bool` | |
 |`Order` |Приоритет |`int` | |
 |===
 
