--- a/modules/schemas/pages/release/BackOffice/CardReconcile.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardReconcile.adoc
@@ -149,7 +149,7 @@
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | |
 |`Turn` |Очередь |`int` | |
-|`Excluded` |Временно исключен |`bool` | |
+|`Excluded` |Временно исключён |`bool` | |
 |`FileRights` |Права на файлы |`unistring` | |
 |`Deadline` |Срок согласования |`datetime` | |
 |===
