--- a/modules/ApprovalDesigner/pages/ObjectModel/ApprovalPathRoadMap.Excluded_PR.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/ApprovalPathRoadMap.Excluded_PR.adoc
@@ -15,4 +15,4 @@ public bool Excluded { get; set; }
 Значение свойства::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-`true` -- исключен, иначе -- `false`
+`true` -- исключён, иначе -- `false`
