ERR-2383 -- Одинаковые правила в Конструкторе ролей могут записываться разными значениями в SQL

--- a/modules/schemas/pages/release/BackOffice/RefRoleModel.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefRoleModel.adoc
@@ -6,6 +6,8 @@
 
 == Секции карточки
 
+В БД одни и те же значения полей (например, "Параметр" = "Я", "Операция" = "Равно") могут быть записаны и как `0` `0`, и как `NULL` `NULL`.
+
 === Секция "Настройки прав"
 
 * Идентификатор: `E71930E3-F799-40C6-891F-CE824273A101`
@@ -69,7 +71,7 @@
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Parameter` |Параметр |`enum` | a|.Значения:
-* Текущий сотрудник = 0.
+* Я = 0.
 * Руководитель = 1.
 * Подчиненные = 2.
 * Все подчиненные = 3.
