ERR-2383 -- Одинаковые правила в Конструкторе ролей могут записываться разными значениями в SQL

--- a/modules/schemas/pages/release/BackOffice/RefRoleModel.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefRoleModel.adoc
@@ -6,7 +6,7 @@
 
 == Секции карточки
 
-В БД одни и те же значения полей (например, "Параметр" = "Я", "Операция" = "Равно") могут быть записаны и как `0` `0`, и как `NULL` `NULL`.
+В БД значения по умолчанию для некоторых полей (например, "Параметр" = "Я", "Операция" = "Равно") могут быть записаны и как `0`, и как `NULL`.
 
 === Секция "Настройки прав"
 
