SUP-6588 / ERR-2469 -- ссылки на zendesk

--- a/modules/samples/pages/solution/card-lib/card-metadata-scheme.adoc
+++ b/modules/samples/pages/solution/card-lib/card-metadata-scheme.adoc
@@ -5,7 +5,7 @@
 _Модуль учета сетевых устройств_ содержит единственную карточку (_Карточка учета сетевого оборудования_), схема и ресурсы которой расположены в подкаталоге `CardDefs`.
 ====
 
-Сценарий создания схемы метаданных карточки достаточно подробно рассмотрен в xref:solutions:cards/scheme/create-edit-scheme.adoc[Создание и редактирование схемы данных], а также в статье https://docsvision.zendesk.com/entries/79607235[Создание карточек в {dv} 5], поэтому здесь отмечены только ключевые моменты.
+Сценарий создания схемы метаданных карточки достаточно подробно рассмотрен в xref:solutions:cards/scheme/create-edit-scheme.adoc[Создание и редактирование схемы данных], поэтому здесь отмечены только ключевые моменты.
 
 _Модуль учета сетевых устройств_ использует один тип карточки для хранения информации по сетевым устройствам и для хранения журнала доступности. Если создаётся рабочее _решение_ подобного назначения, логичнее будет использовать имеющийся в {dv} _справочник серверов_, а для хранения журнала отдельные карточки (например, расширить карточку _сервера_).
 
