--- a/modules/solutions/pages/cards/card-component/library.adoc
+++ b/modules/solutions/pages/cards/card-component/library.adoc
@@ -39,7 +39,8 @@
 ====
 Если при помощи нового инсталляционного пакета или пакета исправлений производится обновление сборки, содержащей компонент библиотеки карточек, может потребоваться перезагрузка приложения.
 
-Если этот момент является критичным, то при разработке собственного решения рекомендуется реализовывать компонент библиотеки карточек как COM-класс, реализующий интерфейс `ICardLibraryInfo и ICardLibraryInfo2` (см. статью https://docsvision.zendesk.com/entries/80645519[Создание компонента библиотеки карточек на C++]).
+Если этот момент является критичным, то при разработке собственного решения рекомендуется реализовывать компонент библиотеки карточек как COM-класс, реализующий интерфейс `ICardLibraryInfo и ICardLibraryInfo2`.
+//(см. статью https://docsvision.zendesk.com/entries/80645519[Создание компонента библиотеки карточек на C++]).
 ====
 
 .Пример базового кода компонента библиотеки:
