ERR-2469 / SUP-6588 -- ссылки на зендеск

--- a/modules/samples/pages/solution/card-sql-package.adoc
+++ b/modules/samples/pages/solution/card-sql-package.adoc
@@ -48,12 +48,14 @@
 
 Карточки (включая бизнес-процессы) экспортируются стандартными средствами {dv} {wincl}.
 
-Для выгрузки данных из справочников и конструкторов рекомендуется использовать специализированную утилиту для экспорта решения -- _CardTypeExtractor_, которая доступна на сайте https://docsvision.zendesk.com/entries/22151452-%D0%AD%D0%BA%D1%81%D0%25%22[Портале технической поддержки {dv}].
+Также возможно выгрузить данные из справочников и конструкторов.
 
-[NOTE]
-====
-Для удобства, утилита _CardTypeExtractor_ предоставляется вместе с исходным кодом данного решения и расположена в каталоге `Other` архива.
-====
+//Для выгрузки данных из справочников и конструкторов рекомендуется использовать специализированную утилиту для экспорта решения -- _CardTypeExtractor_, которая доступна на сайте https://docsvision.zendesk.com/entries/22151452-%D0%AD%D0%BA%D1%81%D0%25%22[Портале технической поддержки {dv}].
+//
+//[NOTE]
+//====
+//Для удобства, утилита _CardTypeExtractor_ предоставляется вместе с исходным кодом данного решения и расположена в каталоге `Other` архива.
+//====
 
 == Создание "CardPackage"
 
