Как отображается навигация?

--- a/modules/external-storages/external-storages.adoc
+++ b/modules/external-storages/external-storages.adoc
@@ -1,3 +1,4 @@
+.Разработка компонентов внешних хранилищ
 ** xref:external-storages-develop.adoc[]
 *** xref:сonnector-to-storage.adoc[]
 **** xref:main-provider-class.adoc[]
