--- a/modules/samples/samples.adoc
+++ b/modules/samples/samples.adoc
@@ -1,4 +1,4 @@
-* Сборник примеров
+.Сборник примеров
 ** Использование объектной модели уровня бизнес-логики
 *** xref:object-model/init-context.adoc[]
 *** xref:object-model/card-xref-add.adoc[]
