--- a/modules/solutions/solutions.adoc
+++ b/modules/solutions/solutions.adoc
@@ -1,3 +1,4 @@
+.Разработка решений
 ** xref:cards/develop-solution.adoc[]
 *** xref:cards/scheme/dev-cards-and-lib.adoc[]
 **** xref:cards/scheme/dev-data-scheme.adoc[]
