--- a/modules/views/views.adoc
+++ b/modules/views/views.adoc
@@ -1,7 +1,10 @@
+.Работа с представлениями
 ** xref:views.adoc[]
 *** xref:data-description.adoc[]
 *** xref:formating-description.adoc[]
 *** xref:get-data.adoc[]
+
+.Работа со ссылками
 ** xref:links.adoc[]
 ** xref:download-mode.adoc[]
 ** xref:delayed-changes.adoc[]
