TSK-2708 -- переработал навигацию модулей. Надеюсь, будет удобнее.

--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -1,3 +1,6 @@
+* xref:formatting.adoc[Соглашения по оформлению]
+* xref:terms.adoc[Перечень терминов и их определений]
+* xref:abbreviations.adoc[Перечень принятых сокращений]
 * xref:index.adoc[]
 * xref:begin.adoc[]
 * xref:development.adoc[]
