--- a/modules/BackOffice-ObjectModel-Services-IKindService/pages/IKindService.AddCreationSettings_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IKindService/pages/IKindService.AddCreationSettings_MT.adoc
@@ -60,7 +60,7 @@ operation:::
 
 Список доступных идентификаторов режима создания modeId может быть получен следующим образом
 
-[source,charp]
+[source,csharp]
 ----
 List<NavCardCreatorInfo> cardKindCreators = new List<NavCardCreatorInfo>();
 
