--- a/modules/Platform-WinForms/pages/CardControl.ShowMessage_MT.adoc
+++ b/modules/Platform-WinForms/pages/CardControl.ShowMessage_MT.adoc
@@ -42,7 +42,7 @@ buttons:::
 
 Ниже приведён пример использования функции `ShowMessage` для получения подтверждения выполнения операции от пользователя.
 
-[source,charp]
+[source,csharp]
 ----
 private void deleteFiles_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
  {
