--- a/modules/appendix/pages/SessionGetList.adoc
+++ b/modules/appendix/pages/SessionGetList.adoc
@@ -6,7 +6,7 @@
 
 == Запрос
 
-[source,charp]
+[source,csharp]
 ----
 POST /DocsVision/StorageServer/StorageServerService.asmx HTTP/1.1
 Host: DOCSVISION_SERVER.COM
@@ -30,7 +30,7 @@ baseName:::
 
 == Ответ
 
-[source,charp]
+[source,csharp]
 ----
 HTTP/1.1 200 OK
 Content-Type: text/xml; charset=utf-8
