--- a/modules/appendix/pages/controls/docsvision/HistoryGrid.adoc
+++ b/modules/appendix/pages/controls/docsvision/HistoryGrid.adoc
@@ -15,7 +15,7 @@ image::ROOT:history-grid.png[Элемент управления "HistoryGrid"]
 * `Initialize(ObjectContext, BaseCard, BuiltInOperation)` -- инициализация `_HistoryGrid_` с передачей операции открытия истории. Последний параметр может иметь значение `null`.
 
 .Пример инициализации `_HistoryGrid_` с передачей данных текущей карточки:
-[source,charp]
+[source,csharp]
 ----
 protected override void OnCardActivated(DocsVision.Platform.WinForms.CardActivatedEventArgs e)
 {
