--- a/modules/appendix/pages/controls/docsvision/HtmlBrowser.adoc
+++ b/modules/appendix/pages/controls/docsvision/HtmlBrowser.adoc
@@ -22,7 +22,7 @@
 * `*XslTransform*` -- XSLT-шаблон для преобразования содержимого карточки в режимах `*CardDataXml*` и `*OwnCardDataXml*`.
 
 .Пример инициализации `*HtmlBrowser*` с отображением содержимого карточки, идентификатор которой указан в ссылочном поле `CategoryList`:
-[source,charp]
+[source,csharp]
 ----
 protected override void OnCardInitialized(EventArgs e)
 {
