--- a/modules/appendix/pages/directory-activation-parameters.adoc
+++ b/modules/appendix/pages/directory-activation-parameters.adoc
@@ -4,7 +4,7 @@
 
 Далее приведён пример скрипта карточки, в котором используется функциональность открытия _Справочника сотрудников_ с установкой курсора на определённом сотруднике.
 
-[source,charp]
+[source,csharp]
 ----
 string employeeID = new Guid("00000000-0000-0000-0000-000000000000").ToString("B").ToUpperInvariant(); <.>
          
