--- a/modules/external-storages/pages/connector-sample.adoc
+++ b/modules/external-storages/pages/connector-sample.adoc
@@ -41,7 +41,7 @@
 . Соберите проект `GoogleDriveStorageProvider`.
 . Соберите и запустите проект `AskToken`. В процессе работы программы `AskToken` будет вызван код из класса `GoogleDriveProxy` (проект `GoogleDriveStorageProvider`):
 +
-[source,charp]
+[source,csharp]
 ----
 using (var stream =
                 new FileStream(credentialsFile, FileMode.Open, FileAccess.Read))
