--- a/modules/external-storages/pages/provider-gui.adoc
+++ b/modules/external-storages/pages/provider-gui.adoc
@@ -2,7 +2,7 @@
 
 Графический интерфейс настройки провайдера к внешнему хранилищу представляет собой компонент типа `System.Windows.Forms.UserControl` с реализованным программным интерфейсом `xref:Platform-WinForms:Controls/IExtensionPropertiesControl_IN.adoc[IExtensionPropertiesControl]`.
 
-[source,charp]
+[source,csharp]
 ----
 public partial class ProviderConfigurationPropertyControl : UserControl, IExtensionPropertiesControl
 ----
