--- a/modules/external-storages/pages/storage-rule.adoc
+++ b/modules/external-storages/pages/storage-rule.adoc
@@ -90,7 +90,7 @@ image::ROOT:storage-rule.png[Настройки правил хранилища]
 +
 Класс с формой настройки представляется собой компонент типа `System.Windows.Forms.UserControl` с реализованным программным интерфейсом `xref:Platform-WinForms:Controls/IExtensionPropertiesControl_IN.adoc[IExtensionPropertiesControl]`. Далее приведён код примера данного класса.
 +
-[source,charp]
+[source,csharp]
 ----
 using DocsVision.Platform.WinForms.Controls;
 using System;
