--- a/modules/samples/pages/components/employee-control.adoc
+++ b/modules/samples/pages/components/employee-control.adoc
@@ -166,7 +166,7 @@ public bool HideNotActive <.>
 
 Помимо этого, крайне важно обеспечить передачу значений свойств в свой элемент управления, для чего переопределяем свойство `Control`:
 
-[source,charp]
+[source,csharp]
 ----
 public override Control Control
 {
@@ -211,7 +211,7 @@ public Guid SectionTypeId
 
 В данном примере тип `ControlExtensionInfoPackage` реализован в классе `ExtensionPackage`:
 
-[source,charp]
+[source,csharp]
 ----
 public sealed class ExtensionPackage : ControlExtensionInfoPackage
 {
@@ -276,7 +276,7 @@ protected override void UpdatePropertyAttributes() <.>
 
 Чтобы ограничить типы полей, которые могут выступать в качестве источника данных, в базовом классе предусмотрен метод `IsSectionFieldSupported`. Этот метод требуется переопределить, добавив логику проверки поля перед отображением в списке доступных полей:
 
-[source,charp]
+[source,csharp]
 ----
 protected override bool IsSectionFieldSupported(SectionField sectionField)
 {
@@ -296,7 +296,7 @@ protected override bool IsSectionFieldSupported(SectionField sectionField)
 
 Для элемента управления _Сотрудник с фотографией_ данный компонент был реализован в классе `StaffControlWrapper`, в котором определены два свойства по требованиям к функциональности настройки элемента управления: возможность выбора подразделения и фильтра состояний.
 
-[source,charp]
+[source,csharp]
 ----
 [Category("Дополнительные настройки"), DisplayName("Подразделение"), Description("Будут выведены только сотрудники указанного подразделения и подчиненных подразделений")]
 [TypeConverter(typeof(UnitConverter))]
