--- a/modules/samples/pages/faq.adoc
+++ b/modules/samples/pages/faq.adoc
@@ -57,7 +57,7 @@ write $number <.>
 
 Аналогичная задача может быть решена без объектной модели -- прямым обращением к сервису {dv}
 
-[source,charp]
+[source,csharp]
 ----
 $serverUri = "http://docsvision.domain.com/DocsVision/StorageServer/StorageServerService.asmx" <.>
 
