--- a/modules/samples/pages/object-model/approval.adoc
+++ b/modules/samples/pages/object-model/approval.adoc
@@ -30,7 +30,7 @@ mapperFactoryRegistry.RegisterFactory(typeof(ApprovalDesignerMapperFactory));
 +
 . Получите идентификатор согласуемого документа, например, так:
 +
-[source,charp]
+[source,csharp]
 ----
 Guid initialCardId = context.GetObjectRef(this.BaseObject).Id; <.>
 ----
@@ -38,7 +38,7 @@ Guid initialCardId = context.GetObjectRef(this.BaseObject).Id; <.>
 +
 . Получите настройки режима создания согласования:
 +
-[source,charp]
+[source,csharp]
 ----
 KindsCardKind cardKind = context.GetObject<KindsCardKind>(new Guid("9C0E5586-41B8-411E-B5CD-C94B605CB7A1")); <.>
 
