--- a/modules/samples/pages/solution/card-lib/mappers.adoc
+++ b/modules/samples/pages/solution/card-lib/mappers.adoc
@@ -59,7 +59,7 @@ private static void InitializeObjectMap()
 
 . Создаем класс фабрики преобразователей данных с базовым классом `ObjectMapperFactory`:
 +
-[source,charp]
+[source,csharp]
 ----
 public class NetstatSolutionMapperFactory : ObjectMapperFactory
 ----
