--- a/modules/samples/pages/solution/installer/client.adoc
+++ b/modules/samples/pages/solution/installer/client.adoc
@@ -44,7 +44,7 @@
 ----
 
 .Чтобы клиентская часть поддерживала обновление, добавляем:
-[source,charp]
+[source,csharp]
 ----
 <MajorUpgrade DowngradeErrorMessage="Более новая версия продукта [ProductName] уже установлена." />
    
