--- a/modules/samples/pages/solution/update.adoc
+++ b/modules/samples/pages/solution/update.adoc
@@ -59,7 +59,7 @@ public bool Execute()
 +
 . Изменяем значение `Product Id` в xref:solution/installer/client.adoc[проекте пакета установки клиентской части] (файл `Product.wxs`), используя _код продукта_ из схемы метаданных:
 +
-[source,charp]
+[source,csharp]
 ----
 <Product Id="22CE4047-0BA8-4014-9BBE-7D8C43FDE904" 
  Name="NetstatSolutionClient"
