--- a/modules/solutions/pages/cards/object-model/card-section-lines.adoc
+++ b/modules/solutions/pages/cards/object-model/card-section-lines.adoc
@@ -66,7 +66,7 @@ public class SampleCardStructSection : ObjectBase
 
 Для такой секции свойственно наличие подчиненной секции, причем этой подчиненной секцией является сама секция. В этом основное отличие в реализации объектной модели.
 
-[source,charp]
+[source,csharp]
 ----
 public class SampleCardTreeSection : ObjectBase
 {
