--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.RenameAdditionalFile_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.RenameAdditionalFile_MT.adoc
@@ -60,7 +60,7 @@ documentService.RenameAdditionalFile(document, document.Files.First(t => t.FileT
 
 Можно указывать новое название файла без расширения, а расширение получать из оригинального файла, например, так:
 
-[source,charp]
+[source,csharp]
 ----
 DocumentFile firstAdditionalFile = document.Files.First(t => t.FileType = DocumentFileType.Additional);
 string newFileName = string.Format("Новое название файла{0}", Path.GetExtension(firstAdditionalFile.FileName));
