--- a/modules/Platform-StorageServer/pages/IBinaryStorage.SupportedPartions_PR.adoc
+++ b/modules/Platform-StorageServer/pages/IBinaryStorage.SupportedPartions_PR.adoc
@@ -21,7 +21,7 @@ StoragePartitionType SupportedPartions { get; set; }
 
 Значение свойства `SupportedPartions` может быть задано в виде набора флагов `StoragePartitionType`, если тип хранилища содержит несколько разделов:
 
-[source,charp]
+[source,csharp]
 ----
 SupportedPartions = StoragePartitionType.Primary` | StoragePartitionType.Archive;
 ----
