--- a/modules/Platform-WinForms/pages/CardLibary.GetLibraryDefinition_MT.adoc
+++ b/modules/Platform-WinForms/pages/CardLibary.GetLibraryDefinition_MT.adoc
@@ -21,7 +21,7 @@ protected virtual string GetLibraryDefinition()
 
 Схема карточки должна быть добавлена в компонент в виде ресурса, который может быть возвращен методом `GetLibraryDefinition`:
 
-[source,charp]
+[source,csharp]
 ----
 public override string GetCardDefinition(Guid cardTypeID)
 {
