--- a/modules/cards/pages/card-lock.adoc
+++ b/modules/cards/pages/card-lock.adoc
@@ -54,7 +54,7 @@ fileData.PlaceLock(true); <.>
 
 Устанавливать блокировку на объект рекомендуется во всех сценариях, связанных с изменением данных, непосредственно после получения объекта. В сочетании с проверкой состояния блокировки код может быть следующим:
 
-[source,charp]
+[source,csharp]
 ----
 if (cardData.LockStatus = LockStatus.Free) <.>
 {
