Создал новые атрибуты для групп

--- a/modules/appendix/pages/user-session-properties.adoc
+++ b/modules/appendix/pages/user-session-properties.adoc
@@ -43,7 +43,7 @@ string accountName = userSession.Properties["AccountName"].Value.ToString() <.>
 |`FolderUnreadCountLimit` |Максимальное количество непрочитанных карточек, учитываемое при вычислении количества непрочитанных карточек.
 |`FullTextSearchEnabled` |Флаг, указывающий, что полнотекстовый поиск включён в базе данных.
 |`IsAdmin` |Флаг, указывающий, что текущий пользователь является администратором {dv} -- входит в группу *{dv-admins-serv}* на сервере {dv}.
-|`IsArchiveOperator` |Флаг, указывающий, что текущий пользователь может работать с долговременным архивом -- входит в группу `Docsvision Archive Operators` на сервере Docsvision.
+|`IsArchiveOperator` |Флаг, указывающий, что текущий пользователь может работать с долговременным архивом -- входит в группу *{dv-arch-ops-serv}* на сервере {dv}.
 |`IsPowerUser` |Флаг, указывающий, что текущий пользователь является привилегированным пользователем -- входит в группу _Docsvision Power Users_ на сервере {dv}.
 |`IsSecurityAdmin` |Флаг, указывающий, что текущий пользователь обладает всеми правами *{dv-admins-serv}*, а также может изменять уровни доступа для субъектов и объектов системы -- входит в группу *{dv-admins-serv}* на сервере {dv}.
 |`IsSQCreator` |Флаг, указывающий, что текущий пользователь может создавать новые поисковые запросы -- входит в группу _Docsvision Search Query Creators_ на сервере {dv}.
