--- a/modules/cards/pages/files.adoc
+++ b/modules/cards/pages/files.adoc
@@ -52,7 +52,7 @@ Guid newFileId = file.Id; <.>
 
 [IMPORTANT]
 ====
-Для выполнения операций вытеснения/восстановления файлов из внешнего хранилища требуется наличие привилегии оператора архива (членство в группе _Docsvision Archive Operators_).
+Для выполнения операций вытеснения/восстановления файлов из внешнего хранилища требуется наличие привилегии оператора архива (членство в группе *{dv-power-users-serv}*).
 ====
 
 Текущее состояние файла определяется элементом из перечисления xref:Platform-ObjectManager-Metadata:OfflineState_EN.adoc[`OfflineState` -- перечисление].
