--- a/modules/solutions/pages/cards/object-model/card-section-lines.adoc
+++ b/modules/solutions/pages/cards/object-model/card-section-lines.adoc
@@ -56,7 +56,7 @@ public class SampleCardStructSection : ObjectBase
 <.> В метод `Register` передаем название поля (как в схеме метаданных), его тип (как определён выше) и тип самой секции (текущий класс).
 <.> Конструктор для новой карточки.
 
-При желании, здесь можно добавить собственную бизнес-логику, а также проверку данных перед записью.
+При желании здесь можно добавить собственную бизнес-логику, а также проверку данных перед записью.
 
 == Коллекционная секция
 
