TSK-2810 -- переработал навигацию всех модулей под расширение навигатора

--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -1,10 +1,15 @@
-* xref:formatting.adoc[Соглашения по оформлению]
-* xref:terms.adoc[Перечень терминов и их определений]
-* xref:abbreviations.adoc[Перечень принятых сокращений]
+.xref:index.adoc[Руководство программиста {dv}]
 * xref:index.adoc[]
-* xref:begin.adoc[]
-* xref:development.adoc[]
+
+* Термины и оформление
+** xref:formatting.adoc[Соглашения по оформлению]
+** xref:terms.adoc[Перечень терминов и их определений]
+** xref:abbreviations.adoc[Перечень принятых сокращений]
+
+** xref:begin.adoc[]
+** xref:development.adoc[]
 +
+--
 include::partial$cards.adoc[]
 include::partial$views.adoc[]
 include::partial$solutions.adoc[]
@@ -93,3 +98,4 @@ include::partial$pl-wpf.adoc[]
 include::partial$platform.adoc[]
 include::partial$workflow-api.adoc[]
 include::partial$schemas.adoc
+--
